--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Ecoleta</title>
 
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&Ubuntu:wght@700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
 
         <link rel="stylesheet" href="/styles/main.css">
     </head>
@@ -27,7 +27,7 @@
     
                     <p>Ajudamos pessoas a encontrarem pontos de coleta de forma eficiente</p>
     
-                    <button>Pesquisar pontos de coleta</button>
+                    <a href="#"><span></span><strong>Pesquisar pontos de coleta</strong></a>
                 </main>
             </div>
 
